# hs-grpc

./: .gitignore  .gitmodules  ChangeLog.md  README.md  cabal.project  hs-grpc.cabal
.github/workflows/: ci.yaml
app/: Main.hs
example/: Makefile  hs-grpc-example.cabal
example/app/: server_interceptors.cpp  server_interceptors.hs  simple-asio-server.hs  simple-server.hs
example/protos/: example.proto  helloworld.proto
hs-grpc-client/: hs-grpc-client.cabal
hs-grpc-client/HsGrpc/: Client.hs
hs-grpc-client/cbits/: hs_grpc_client.cpp
hs-grpc-client/include/: hs_grpc_client.h
hs-grpc-server/: hs-grpc-server.cabal
hs-grpc-server/HsGrpc/: Server.hs
hs-grpc-server/HsGrpc/Common/: Log.hsc  Utils.hs
hs-grpc-server/HsGrpc/Common/Foreign/: Channel.hsc
hs-grpc-server/HsGrpc/Server/: Context.hs  FFI.hs  Types.hsc
hs-grpc-server/HsGrpc/Server/Internal/: Types.hsc
hs-grpc-server/cbits/: hs_grpc_server.cpp  hs_grpc_server_context.cpp
hs-grpc-server/include/: hs_grpc_server.h
hs-grpc-server/include/hsgrpc/: auth.hpp
server/: hs-grpc-server.cabal
server/HsGrpc/: Server.hs
server/HsGrpc/Common/Foreign/: Channel.hsc
server/HsGrpc/Server/: FFI.hs  Message.hs  Types.hsc
server/cbits/: hs_asio_grpc.cpp  hs_grpc.cpp  hs_grpc_common.cpp  hs_grpc_server.cpp
server/include/: hs_grpc.h  hs_grpc_server.h
tests/: Makefile  hs-grpc-tests.cabal  requirements.txt
tests/cases/: AsyncSchedule001_client.py  AsyncSchedule001_server.hs  test_auth_client.py  test_auth_server.hs
tests/cases/credentials/: README.md
tests/protos/: AsyncSchedule.proto  auth.proto  msg.proto
