cabal-version:      2.4
name:               hs-grpc
version:            0.1.0.0
synopsis:           gRPC in Haskell
description:
  Please see the README on Github at <https://github.com/4eUeP/hs-grpc#readme>

license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Copyright (c)
author:             mu
maintainer:         mu@laxcat.xyz
tested-with:        GHC ==8.10.7
category:           Network
homepage:           https://github.com/4eUeP/hs-grpc
bug-reports:        https://github.com/4eUeP/hs-grpc/issues
build-type:         Simple
extra-source-files:
  ChangeLog.md
  README.md

source-repository head
  type:     git
  location: https://github.com/4eUeP/hs-grpc

common common-lang
  default-language:   Haskell2010
  default-extensions:
    DeriveGeneric
    DerivingStrategies
    EmptyDataDeriving
    GADTSyntax
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeApplications
    UnliftedFFITypes

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

library
  import:          common-lang
  hs-source-dirs:  src
  exposed-modules: Lib
  build-depends:   base >=4.11 && <5

executable hs-grpc
  import:           common-lang
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:    base >=4.11 && <5
  default-language: Haskell2010
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N

test-suite hs-grpc-test
  import:             common-lang
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  build-depends:
    , base     >=4.11 && <5
    , hs-grpc
    , hspec

  build-tool-depends: hspec-discover:hspec-discover ==2.*
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
