cabal-version:      2.4
name:               hs-grpc-example
version:            0.1.0.0
synopsis:           Examples for hs-grpc
description:
  Please see the README on Github at <https://github.com/4eUeP/hs-grpc#readme>

license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Copyright (c)
author:             mu
maintainer:         mu@laxcat.xyz
category:           Network
build-type:         Custom
extra-source-files:
  protos/helloworld.proto
  README.md

custom-setup
  setup-depends:
    , base              >=4.5  && <5
    , Cabal             >=2.4  && <4
    , proto-lens-setup  ^>=0.4

executable simple-server
  hs-source-dirs:   app
  main-is:          simple-server.hs
  build-depends:
    , base                >=4.13 && <5
    , bytestring
    , hs-grpc-server
    , microlens
    , proto-lens
    , proto-lens-runtime

  other-modules:
    Proto.Helloworld
    Proto.Helloworld_Fields

  autogen-modules:
    Proto.Helloworld
    Proto.Helloworld_Fields

  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -threaded -rtsopts "-with-rtsopts=-N -A64m -n4m -qg -qn1"
