cabal-version:      2.4
name:               hs-grpc-example
version:            0.1.0.0
synopsis:           Examples for hs-grpc
description:
  Please see the README on Github at <https://github.com/4eUeP/hs-grpc#readme>

license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Copyright (c)
author:             mu
maintainer:         mu@laxcat.xyz
category:           Network
build-type:         Custom
extra-source-files:
  protos/example.proto
  protos/gen-cpp/*.h
  README.md

custom-setup
  setup-depends:
    , base              >=4.5  && <5
    , Cabal             >=2.4  && <4
    , proto-lens-setup  ^>=0.4

library
  build-depends:
    , base                >=4.13 && <5
    , proto-lens-runtime

  exposed-modules:
    Proto.Example
    Proto.Example_Fields

  autogen-modules:
    Proto.Example
    Proto.Example_Fields

  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

executable simple-server
  hs-source-dirs:   app
  main-is:          simple-server.hs
  build-depends:
    , base             >=4.13 && <5
    , bytestring
    , hs-grpc-example
    , hs-grpc-server
    , microlens
    , proto-lens
    , text

  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -threaded -rtsopts "-with-rtsopts=-N -A64m -n4m -qg -qn1"

executable server-interceptor
  hs-source-dirs:   app
  main-is:          server_interceptors.hs
  build-depends:
    , base             >=4.13 && <5
    , bytestring
    , hs-grpc-example
    , hs-grpc-server
    , microlens
    , proto-lens
    , text

  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -threaded -rtsopts "-with-rtsopts=-N -A64m -n4m -qg -qn1"

  cxx-sources:
    app/server_interceptors.cpp
    protos/gen-cpp/example.pb.cc

  cxx-options:      -std=c++17
  include-dirs:     protos/gen-cpp
