cabal-version:      3.6
name:               hs-grpc-server
version:            0.1.0.0
synopsis:           gRPC Server in Haskell
description:
  Please see the README on Github at <https://github.com/4eUeP/hs-grpc#readme>

license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Copyright (c)
author:             mu
maintainer:         mu@laxcat.xyz
tested-with:        GHC ==8.10.7 || ==9.2.5
category:           Network
homepage:           https://github.com/4eUeP/hs-grpc
bug-reports:        https://github.com/4eUeP/hs-grpc/issues
build-type:         Simple
extra-source-files:
  ChangeLog.md
  external/asio/asio/include/**/*.hpp
  external/asio/asio/include/**/*.ipp
  external/asio-grpc/src/**/*.hpp
  external/asio-grpc/src/**/*.ipp
  include/*.h
  README.md

source-repository head
  type:     git
  location: https://github.com/4eUeP/hs-grpc

flag hsgrpc_use_protosuite
  default:     False
  description: Use proto3-suite as encoder & decoder.

flag hsgrpc_enable_asan
  default:     False
  description:
    Enable AddressSanitizer. See hs-grpc-example for an example usage.

common common-lang
  default-language:   Haskell2010
  default-extensions:
    DeriveGeneric
    DerivingStrategies
    EmptyDataDeriving
    GADTSyntax
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeApplications
    UnliftedFFITypes
    UnliftedNewtypes

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

library
  import:             common-lang
  hs-source-dirs:     .
  cxx-sources:
    cbits/hs_grpc_server.cpp
    cbits/hs_grpc_server_context.cpp

  exposed-modules:
    HsGrpc.Common.Log
    HsGrpc.Server
    HsGrpc.Server.Context
    HsGrpc.Server.Types

  other-modules:
    HsGrpc.Common.Foreign.Channel
    HsGrpc.Common.Utils
    HsGrpc.Server.FFI
    HsGrpc.Server.Internal.Types
    HsGrpc.Server.Message

  build-depends:
    , async       ^>=2.2
    , base        >=4.14 && <5
    , bytestring  >=0.10 && <0.12
    , foreign     ^>=0.2
    , ghc-prim
    , microlens
    , primitive
    , proto-lens  ^>=0.7
    , text
    , unix
    , vector

  build-tool-depends: hsc2hs:hsc2hs
  hsc2hs-options:
    "--cc=g++" "--lflag=-lstdc++" "--cflag=-D__HSC2HS__=1"
    "--cflag=-std=c++17"

  cc-options:         -O3
  cxx-options:
    -O3 -std=c++17 -Werror=switch -fcoroutines -DAGRPC_STANDALONE_ASIO
    -DASIO_HAS_CO_AWAIT -DASIO_HAS_STD_COROUTINE

  include-dirs:
    external/asio/asio/include external/asio-grpc/src include
    /usr/local/include

  extra-lib-dirs:     /usr/local/lib
  extra-libraries:
    stdc++
    grpc++
    grpc
    gpr
    grpc++_reflection
    protobuf

  if flag(hsgrpc_use_protosuite)
    build-depends: proto3-suite >=0.5 && <0.7
    cpp-options:   -DHSGRPC_USE_PROTOSUITE

  if flag(hsgrpc_enable_asan)
    hsc2hs-options:
      "--cflag=-fsanitize=address" "--cflag=-fno-omit-frame-pointer"
      "--cflag=-static-libasan" "--lflag=-fsanitize=address"
      "--lflag=-fno-omit-frame-pointer" "--lflag=-static-libasan"

    cxx-options:
      -fsanitize=address -fno-omit-frame-pointer -DHSGRPC_ENABLE_ASAN
      -static-libasan

test-suite hs-grpc-server-test
  import:             common-lang
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  build-depends:
    , base            >=4.11 && <5
    , hs-grpc-server
    , hspec

  build-tool-depends: hspec-discover:hspec-discover >=2 && <3
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
