cabal-version:      3.4
name:               hs-grpc-tests
version:            0.1.0.0
synopsis:           Tests for hs-grpc
description:
  Please see the README on Github at <https://github.com/4eUeP/hs-grpc#readme>

license:            BSD-3-Clause
category:           Network
maintainer:         mu@laxcat.xyz
homepage:           https://github.com/4eUeP/hs-grpc
bug-reports:        https://github.com/4eUeP/hs-grpc/issues
build-type:         Custom
extra-source-files: protos/*.proto

custom-setup
  setup-depends:
    , base              >=4.5  && <5
    , Cabal             >=2.4  && <4
    , proto-lens-setup  ^>=0.4

-- FIXME: Support to build with template-haskell
flag hsgrpc_enable_asan
  default:     False
  description: Enable AddressSanitizer.

library
  hs-source-dirs:   .
  build-depends:
    , base                >=4.13 && <5
    , proto-lens-runtime

  exposed-modules:
    Proto.AsyncSchedule
    Proto.AsyncSchedule_Fields
    Proto.Auth
    Proto.Auth_Fields
    Proto.Msg
    Proto.Msg_Fields

  autogen-modules:
    Proto.Msg
    Proto.Msg_Fields
    Proto.AsyncSchedule
    Proto.AsyncSchedule_Fields
    Proto.Auth
    Proto.Auth_Fields

  default-language: GHC2021

common common-exe
  hs-source-dirs:     cases
  build-depends:
    , base                >=4.13 && <5
    , bytestring
    , hs-grpc-server
    , hs-grpc-tests
    , microlens
    , proto-lens
    , proto-lens-runtime
    , text

  default-language:   GHC2021
  default-extensions:
    DataKinds
    OverloadedStrings

  -- XXX: Tricky options to link static archive, see: https://github.com/haskell/cabal/issues/4677
  if (flag(hsgrpc_enable_asan) && os(osx))
    ghc-options: "-optl-Wl,-lasan"

  if (flag(hsgrpc_enable_asan) && !os(osx))
    ghc-options:
      -pgml g++ "-optl-Wl,--allow-multiple-definition"
      "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lasan"
      "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
    -threaded -rtsopts -with-rtsopts=-N

executable AsyncSchedule001_server
  import:  common-exe
  main-is: AsyncSchedule001_server.hs

executable test_auth_server
  import:  common-exe
  main-is: test_auth_server.hs
